add Strings#splitAsIterable/List/Set/Stream